# Lessons_Reporter_Bot

./: .dockerignore  .gitignore  Dockerfile  README.md  amvera.yml  pyproject.toml  requirements.txt
lessons_reporter_bot/: authorization_service.py  bot_service.py  callback_data.py  callback_storage.py  main.py  models.py  report_builder.py  report_storage.py  settings.py  student_storage.py  topic_storage.py  utils.py
