[project]
name = "lessons-reporter-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyTelegramBotAPI==4.21.0",
    "pydantic==2.8.2",
    "pydantic-settings",
    "sqlmodel",
]

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff]
target-version = "py312"
fix = true

[tool.ruff.lint]
preview = true
select = ["I"]

[tool.uv]
dev-dependencies = ["mypy==1.11.1", "ruff==0.6.2"]

[tool.mypy]
plugins = ["pydantic.mypy", "mypy_sqlalchemy"]
import_untyped = false
